--- a/PSForever_Stats_MVP/index.html
+++ b/PSForever_Stats_MVP/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!--v0.1 MVP for retrieving PSForever Stats-->
+<!--v0.2 MVP for retrieving PSForever Stats-->
 
 <html lang="en">
 <head>
@@ -16,7 +16,7 @@
     <section>
       <nav>
         <div>
-          <a href="#"></a>
+          <a href="#" onclick="id"></a>
         </div>
         <div>
           <a href="#"></a>
@@ -26,8 +26,41 @@
   </header>
   <main id="main">
     <div>
-      <h1 id="Leader_board">Character Leader Board (Top 50)</h1>
+      <h1 id="Empire_Leader_Board">Empire Leader Board</h1>
     </div>
+    <div>
+      <table id="empireTable">
+        <thead>
+          <tr>
+            <th>Rank</th>
+            <th>Faction</th>
+            <th>Kill Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Rows will be dynamically added here -->
+        </tbody>
+      </table>
+    </div>
+    <div id="pagination">
+      <!-- Page buttons will be dynamically added here -->
+    </div>
+    <div>
+      <h1 id="Leader_board">Character Leader Board (Top 1000)</h1>
+    </div>
+    <table style="width: 25%; padding: 0px; margin: 0px; left: 0px; right: 0px; margin-left: auto; margin-right: auto;">
+      <thead>
+        <tr>
+          <td>
+            <input id="table-search" type="text" style="width: 200px;" placeholder="Search by Username"/>
+          </td>
+          <td>
+            <input id="table-search-clear" type="button" value="Clear Search"/>
+          </td>
+        </tr>
+        <tr style="background-color: #ececec;"><td></td></tr>
+      </thead>
+    </table>
     <div class="tables-wrapper">
       <div class="table-container">
       <table id="myTable">
@@ -49,26 +82,7 @@
       </table>
     </div>
     </div>
-    <div>
-      <h1 id="Empire_Leader_Board">Empire Leader Board</h1>
-    </div>
-    <div>
-      <table id="empireTable">
-        <thead>
-          <tr>
-            <th>Rank</th>
-            <th>Faction</th>
-            <th>Kill Total</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Rows will be dynamically added here -->
-        </tbody>
-      </table>
-    </div>
-    <div id="pagination">
-      <!-- Page buttons will be dynamically added here -->
-    </div>
+    
   </main>
   <footer>
 
