--- a/PSForever_Stats_MVP/index.html
+++ b/PSForever_Stats_MVP/index.html
@@ -25,61 +25,101 @@
     </section>
   </header>
   <main id="main">
-    <div>
-      <h1 id="Empire_Leader_Board">Empire Leader Board</h1>
-    </div>
-    <div>
-      <table id="empireTable">
+    <!-- Tab header div -->
+    <div class="tab_header">
+      <table>
         <thead>
           <tr>
-            <th>Rank</th>
-            <th>Faction</th>
-            <th>Kill Total</th>
+            <td class="tab">
+              <!-- Would be cleaner to move this to the index.js script -->
+              <a href="#" onclick="
+                          document.getElementById('_t0').style.display = 'block';
+                          document.getElementById('_t1').style.display = 'none';
+                          document.getElementById('_t2').style.display = 'none';">
+                Empire
+              </a>
+            </td>
+            <td></td>
+            <td class="tab">
+              <a href="#" onclick="
+                          document.getElementById('_t0').style.display = 'none';
+                          document.getElementById('_t1').style.display = 'block';
+                          document.getElementById('_t2').style.display = 'none';">
+                Character
+              </a>
+            </td>
+            <td></td>
+            <td class="tab">
+              <a href="#" onclick="
+                          document.getElementById('_t0').style.display = 'none';
+                          document.getElementById('_t1').style.display = 'none';
+                          document.getElementById('_t2').style.display = 'block';">
+                Weekly
+              </a>
+            </td>
           </tr>
         </thead>
-        <tbody>
-          <!-- Rows will be dynamically added here -->
-        </tbody>
       </table>
+    </div>
+    <div id="_t0" style="display: block;">
+      <div>
+        <h1 id="Empire_Leader_Board">Empire Leader Board</h1>
+      </div>
+      <div>
+        <table id="empireTable">
+          <thead>
+            <tr>
+              <th>Rank</th>
+              <th>Faction</th>
+              <th>Kill Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Rows will be dynamically added here -->
+          </tbody>
+        </table>
+      </div>
     </div>
     <div id="pagination">
       <!-- Page buttons will be dynamically added here -->
     </div>
-    <div>
-      <h1 id="Leader_board">Character Leader Board (Top 1000)</h1>
-    </div>
-    <table style="width: 25%; padding: 0px; margin: 0px; left: 0px; right: 0px; margin-left: auto; margin-right: auto;">
-      <thead>
-        <tr>
-          <td>
-            <input id="table-search" type="text" style="width: 200px;" placeholder="Search by Username"/>
-          </td>
-          <td>
-            <input id="table-search-clear" type="button" value="Clear Search"/>
-          </td>
-        </tr>
-        <tr style="background-color: #ececec;"><td></td></tr>
-      </thead>
-    </table>
-    <div class="tables-wrapper">
-      <div class="table-container">
-      <table id="myTable">
+    <div id="_t1" style="display: none;">
+      <div>
+        <h1 id="Leader_board">Character Leader Board (Top 1000)</h1>
+      </div>
+      <table style="width: 25%; padding: 0px; margin: 0px; left: 0px; right: 0px; margin-left: auto; margin-right: auto;">
         <thead>
           <tr>
-            <th>Rank</th>
-            <th>Faction</th>
-            <th>Username</th>
-            <th>Kills</th>
-            <th>Battle Rank</th>
-            <th>Command Rank</th>
-            <th>BEP</th>
-            <th>CEP</th>
+            <td>
+              <input id="table-search" type="text" style="width: 200px;" placeholder="Search by Username"/>
+            </td>
+            <td>
+              <input id="table-search-clear" type="button" value="Clear Search"/>
+            </td>
           </tr>
+          <tr style="background-color: #ececec;"><td></td></tr>
         </thead>
-        <tbody>
-          <!-- Rows will be dynamically added here -->
-        </tbody>
       </table>
+      <div class="tables-wrapper">
+        <div class="table-container">
+        <table id="myTable">
+          <thead>
+            <tr>
+              <th>Rank</th>
+              <th>Faction</th>
+              <th>Username</th>
+              <th>Kills</th>
+              <th>Battle Rank</th>
+              <th>Command Rank</th>
+              <th>BEP</th>
+              <th>CEP</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Rows will be dynamically added here -->
+          </tbody>
+        </table>
+      </div>
     </div>
     </div>
     
