--- a/PSForever_Stats_MVP/index.html
+++ b/PSForever_Stats_MVP/index.html
@@ -57,6 +57,17 @@
                 Weekly
               </a>
             </td>
+            <!-- Current tab not in use yet.
+            <td></td>
+            <td class="tab">
+              <a href="#" onclick="
+                          document.getElementById('_t0').style.display = 'none';
+                          document.getElementById('_t1').style.display = 'none';
+                          document.getElementById('_t2').style.display = 'block';">
+                Current
+              </a>
+            </td>
+            -->
           </tr>
         </thead>
       </table>
